--- a/archives/2020-11-25.md
+++ b/archives/2020-11-25.md
@@ -1,54 +1,67 @@
 # 2020-11-25
 
-共 104 条
+共 117 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Wed Nov 25 2020 14:01:35 GMT+0800 (CST) -->
+<!-- 最后更新时间 Wed Nov 25 2020 15:01:20 GMT+0800 (CST) -->
 1. [如何看待「美国多州宣布毒品合法化」？](https://www.zhihu.com/question/430971324)
-1. [如何看待江苏泰州一奔驰男撞外卖员后称「外卖员人命不值钱」惹众怒，遭外卖员围殴被打出血？](https://www.zhihu.com/question/431744548)
-1. [如何看待《中国化学》一论文通讯作者把自己 P 成女娲，作为期刊封面？](https://www.zhihu.com/question/431763472)
-1. [《西游记》里白龙马为何基本从不参加战斗？](https://www.zhihu.com/question/48410423)
 1. [如何看待澳大利亚媒体称中国报道其辱华节目，是在「煽动反澳情绪」？](https://www.zhihu.com/question/431832348)
-1. [如何看待武汉理工大学坠亡研究生陶崇园导师王攀获公示「恢复其硕士研究生招生资格」？](https://www.zhihu.com/question/431894257)
 1. [如何看待上海老人将三百万房产送给一直照顾他的水果摊主，但其家属称「老人痴呆，生病时都是家属照顾」？](https://www.zhihu.com/question/431889437)
+1. [《西游记》里白龙马为何基本从不参加战斗？](https://www.zhihu.com/question/48410423)
 1. [你见过最狠的SCI评论是什么?](https://www.zhihu.com/question/430036342)
-1. [如何看待马斯克身家一夜暴涨超60亿美元，超越盖茨成全球第二大富豪？](https://www.zhihu.com/question/431755816)
-1. [婚恋市场，女性25岁和35岁真的差不多吗？](https://www.zhihu.com/question/424842784)
-1. [如何评价成都地铁宣传文案：「致加班的你」与「每个企业都是慈善家」？](https://www.zhihu.com/question/431668289)
-1. [如何看待 11 月 24 日张培萌在家暴事件后首次发声并晒验伤报告？](https://www.zhihu.com/question/431815211)
-1. [排名在前 1% 的高中生是靠天赋还是靠努力？](https://www.zhihu.com/question/22164041)
-1. [如何评价网红泽一锋冒充医学生进入医科大学解剖楼拍有大体老师出现的视频？](https://www.zhihu.com/question/431688009)
-1. [骨科带量采购来了！山东集采结果公布，骨科耗材最大降幅达 94%！这样下去公立医院还能留得住医生吗？](https://www.zhihu.com/question/430742671)
+1. [如何看待武汉理工大学坠亡研究生陶崇园导师王攀获公示「恢复其硕士研究生招生资格」？](https://www.zhihu.com/question/431894257)
 1. [如何看待杨超越进入上海临港新片区2020年第五批特殊人才名单，将落户上海自贸区？](https://www.zhihu.com/question/431840057)
-1. [如何看待《棋魂》真人版第32集的改编？](https://www.zhihu.com/question/431835024)
+1. [婚恋市场，女性25岁和35岁真的差不多吗？](https://www.zhihu.com/question/424842784)
+1. [如何看待马斯克身家一夜暴涨超60亿美元，超越盖茨成全球第二大富豪？](https://www.zhihu.com/question/431755816)
+1. [如何看待《中国化学》一论文通讯作者把自己 P 成女娲，作为期刊封面？](https://www.zhihu.com/question/431763472)
+1. [如何评价成都地铁宣传文案：「致加班的你」与「每个企业都是慈善家」？](https://www.zhihu.com/question/431668289)
 1. [如何看待游戏《最后生还者2》获得英国「金摇杆奖 2020」玩家票选年度最佳游戏？](https://www.zhihu.com/question/431873267)
+1. [如何看待《棋魂》真人版第32集的改编？](https://www.zhihu.com/question/431835024)
 1. [如何看待清华学生举办的「首届华清大学特普通奖评选」，旨在寻找「十个园子里普通的个体」？背后有哪些意义？](https://www.zhihu.com/question/427891198)
-1. [为什么男朋友说看你睡觉就很开心？](https://www.zhihu.com/question/322931589)
-1. [100个人要过河，只有90张船票，应该怎么分？](https://www.zhihu.com/question/427204810)
+1. [骨科带量采购来了！山东集采结果公布，骨科耗材最大降幅达 94%！这样下去公立医院还能留得住医生吗？](https://www.zhihu.com/question/430742671)
+1. [如何看待 11 月 24 日张培萌在家暴事件后首次发声并晒验伤报告？](https://www.zhihu.com/question/431815211)
 1. [如何看待合肥一医护人员错将打胎药给孕妇，医院该承担什么样责任？](https://www.zhihu.com/question/431787816)
-1. [如何看待土木类高校教师不建议自己的学生包括研究生，本科生去甲方工作这一现象？](https://www.zhihu.com/question/430859065)
-1. [为什么历史学家对易中天评价那么差?](https://www.zhihu.com/question/42015717)
-1. [女儿 15 岁，因为工作原因回家很少，和女儿关系陌生，有没有好的方法可以改善父女关系？](https://www.zhihu.com/question/430818321)
+1. [如何看待江苏泰州一奔驰男撞外卖员后称「外卖员人命不值钱」惹众怒，遭外卖员围殴被打出血？](https://www.zhihu.com/question/431744548)
 1. [有哪些暗示自己不开心的文案?](https://www.zhihu.com/question/422497116)
+1. [如何看待土木类高校教师不建议自己的学生包括研究生，本科生去甲方工作这一现象？](https://www.zhihu.com/question/430859065)
 1. [有没有什么不漏腿又好看的秋冬全身穿搭?](https://www.zhihu.com/question/349741478)
-1. [蚩尤真的是大坏蛋，穷凶恶极吗？](https://www.zhihu.com/question/350632651)
+1. [如何评价网红泽一锋冒充医学生进入医科大学解剖楼拍有大体老师出现的视频？](https://www.zhihu.com/question/431688009)
 1. [你第一次约会都发生哪些尴尬事？](https://www.zhihu.com/question/431833437)
 1. [我会C4D，AE，PR，Davinci，PS，AI，有拍摄基础，能建模，能做特效，哪些岗位适合我？](https://www.zhihu.com/question/420843974)
-1. [英语基础很差怎么过四级？](https://www.zhihu.com/question/64985067)
 1. [如何看待杨超越说火箭少女的解散对她来说是解脱？](https://www.zhihu.com/question/431802213)
+1. [女儿 15 岁，因为工作原因回家很少，和女儿关系陌生，有没有好的方法可以改善父女关系？](https://www.zhihu.com/question/430818321)
 1. [大学很孤独怎么办？室友干嘛都不会等我，没有一个人一直和我在一起？](https://www.zhihu.com/question/425530128)
-1. [超级脑洞挑战赛：第一次带初恋回家，如何花式炫耀？](https://www.zhihu.com/question/431783325)
-1. [猫的什么行为证明它把你当自己人？](https://www.zhihu.com/question/421347011)
-1. [你看过最恶心的小说剧情是什么？](https://www.zhihu.com/question/369332016)
-1. [天津海联冷库感染来源为北美猪头，北美猪头上为啥会有病毒？吃猪肉还安全吗？](https://www.zhihu.com/question/431811135)
-1. [《海贼王》中谁是将皇之下第一人？](https://www.zhihu.com/question/430947750)
 1. [为什么大家都说《原神》逼氪？](https://www.zhihu.com/question/422857015)
+1. [猫的什么行为证明它把你当自己人？](https://www.zhihu.com/question/421347011)
+1. [为什么历史学家对易中天评价那么差?](https://www.zhihu.com/question/42015717)
+1. [《海贼王》中谁是将皇之下第一人？](https://www.zhihu.com/question/430947750)
 1. [如果可以将一个人的记忆储存，并嫁接到另一个人身上，那这是不是重生？](https://www.zhihu.com/question/431595276)
+1. [如何看待某品牌自动炒菜机宣传视频称「将五花肉切成女朋友样子」，客服：表达五花肉能和女朋友一样白白嫩嫩？](https://www.zhihu.com/question/431910071)
 1. [为什么身边的人都瞧不起努力的人?](https://www.zhihu.com/question/303725044)
-1. [你为什么不愿意和父母旅游?](https://www.zhihu.com/question/293045632)
 1. [历史上有哪些我们认为不存在的人物实际上是存在的？](https://www.zhihu.com/question/265076764)
+1. [如何看待育碧《刺客信条：英灵殿》把经验和资源分离、延长游戏时长的现象？](https://www.zhihu.com/question/431326344)
+1. [有哪些让人感到心酸的句子或文案？](https://www.zhihu.com/question/345002334)
 1. [变优秀的过程都是孤独的吗？](https://www.zhihu.com/question/430446155)
 1. [尤三姐那么爱柳湘莲，为什么得不到他的爱 他的心?](https://www.zhihu.com/question/430341716)
+1. [玩王者荣耀，男朋友给自己打辅助是怎样的体验？](https://www.zhihu.com/question/431627725)
+1. [如何看待王俊凯为新戏贴近角色减重到48.2kg？你有什么想对他说的？](https://www.zhihu.com/question/431540644)
+1. [老公/男朋友做了哪件事，让你有「这辈子就是他了」的感觉？](https://www.zhihu.com/question/421025094)
+1. [你看过最恶心的小说剧情是什么？](https://www.zhihu.com/question/369332016)
+1. [老年人运用智能设备困难的问题应该如何解决？你在帮助老年人使用智能设备时有过哪些体验？](https://www.zhihu.com/question/431803947)
+1. [一般游戏的帧率达到多少才能看起来“丝滑”？](https://www.zhihu.com/question/424057685)
+1. [什么“秘诀”能支撑起一个汽车品牌在国内年销百万以上？](https://www.zhihu.com/question/431638315)
+1. [有哪些让你过目不忘的句子？](https://www.zhihu.com/question/402740738)
+1. [阿尔萨斯的屠城行为放在战锤世界观中，是不是就没什么问题，会被认为是大智大勇吗?](https://www.zhihu.com/question/430867652)
+1. [高考还有不到两百天，不想听讲了，想回家自己学习可以吗？](https://www.zhihu.com/question/431033756)
+1. [有哪些十分干净、利落但又包含哲理的名著句子和诗句？](https://www.zhihu.com/question/415288428)
+1. [排名在前 1% 的高中生是靠天赋还是靠努力？](https://www.zhihu.com/question/22164041)
+1. [为什么男朋友说看你睡觉就很开心？](https://www.zhihu.com/question/322931589)
+1. [100个人要过河，只有90张船票，应该怎么分？](https://www.zhihu.com/question/427204810)
+1. [蚩尤真的是大坏蛋，穷凶恶极吗？](https://www.zhihu.com/question/350632651)
+1. [英语基础很差怎么过四级？](https://www.zhihu.com/question/64985067)
+1. [超级脑洞挑战赛：第一次带初恋回家，如何花式炫耀？](https://www.zhihu.com/question/431783325)
+1. [天津海联冷库感染来源为北美猪头，北美猪头上为啥会有病毒？吃猪肉还安全吗？](https://www.zhihu.com/question/431811135)
+1. [你为什么不愿意和父母旅游?](https://www.zhihu.com/question/293045632)
 1. [国办规定必须保留老人熟悉的服务方式，具有什么样的意义？该如何帮助让老人适应智能化时代？](https://www.zhihu.com/question/431779743)
 1. [在太空中开一枪会发生什么?](https://www.zhihu.com/question/428462254)
 1. [本人第一次养猫咪，上班的时候就把猫咪放笼子里，下班回到家里才会把它放出来耍，这样的养猫方式是不是不妥?](https://www.zhihu.com/question/430796376)
