--- a/archives/2020-11-25.md
+++ b/archives/2020-11-25.md
@@ -1,59 +1,65 @@
 # 2020-11-25
 
-共 161 条
+共 167 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Wed Nov 25 2020 21:01:16 GMT+0800 (CST) -->
+<!-- 最后更新时间 Wed Nov 25 2020 22:01:23 GMT+0800 (CST) -->
 1. [如何看待上海老人将三百万房产送给一直照顾他的水果摊主，但其家属称「老人痴呆，生病时都是家属照顾」？](https://www.zhihu.com/question/431889437)
 1. [如何看待澳大利亚媒体称中国报道其辱华节目，是在「煽动反澳情绪」？](https://www.zhihu.com/question/431832348)
 1. [为什么许多国外品牌以创始人名字命名我们觉得高大上，而中国品牌以创始人命名却难接受？](https://www.zhihu.com/question/426636877)
 1. [如何看待东南大学九龙湖校区食堂要求学生分次刷卡，以隐瞒餐费过高?](https://www.zhihu.com/question/431913030)
-1. [如何看待2020年金摇杆年度最佳游戏奖《原神》以第二名成绩败于《最后的生还者2》？](https://www.zhihu.com/question/431874221)
 1. [如何看待杨超越进入上海临港新片区2020年第五批特殊人才名单，将落户上海自贸区？](https://www.zhihu.com/question/431840057)
-1. [从大学宿舍关系里你学到了什么？](https://www.zhihu.com/question/307670950)
+1. [如何看待2020年金摇杆年度最佳游戏奖《原神》以第二名成绩败于《最后的生还者2》？](https://www.zhihu.com/question/431874221)
 1. [假如一个国家拥有并能操控100枚水滴，可以做到轻而易举的征服当今世界么？](https://www.zhihu.com/question/429481997)
+1. [从大学宿舍关系里你学到了什么？](https://www.zhihu.com/question/307670950)
 1. [如何看待合肥一医护人员错将打胎药给孕妇，医院该承担什么样责任？](https://www.zhihu.com/question/431787816)
 1. [如何看待清华学生举办的「首届华清大学特普通奖评选」，旨在寻找「十个园子里普通的个体」？背后有哪些意义？](https://www.zhihu.com/question/427891198)
+1. [2021 年部分节假日安排公布，有哪些信息值得关注？你打算怎么安排？](https://www.zhihu.com/question/431980337)
 1. [有哪些暗示自己不开心的文案?](https://www.zhihu.com/question/422497116)
+1. [如何看待美股两日连涨，道指首次突破30000点，特斯拉市值超5000亿美元，比特币涨超19000美元？](https://www.zhihu.com/question/431876831)
+1. [华为内部文件强调：「不造车，谁再建言造车干扰公司，调离岗位」，为什么华为坚决不触碰「整车造车」业务？](https://www.zhihu.com/question/431924620)
+1. [骨科带量采购来了！山东集采结果公布，骨科耗材最大降幅达 94%！这样下去公立医院还能留得住医生吗？](https://www.zhihu.com/question/430742671)
 1. [你第一次约会都发生哪些尴尬事？](https://www.zhihu.com/question/431833437)
 1. [如何看待某品牌自动炒菜机宣传视频称「将五花肉切成女朋友样子」，客服：表达五花肉能和女朋友一样白白嫩嫩？](https://www.zhihu.com/question/431910071)
-1. [2021 年部分节假日安排公布，有哪些信息值得关注？你打算怎么安排？](https://www.zhihu.com/question/431980337)
-1. [骨科带量采购来了！山东集采结果公布，骨科耗材最大降幅达 94%！这样下去公立医院还能留得住医生吗？](https://www.zhihu.com/question/430742671)
-1. [如何看待美股两日连涨，道指首次突破30000点，特斯拉市值超5000亿美元，比特币涨超19000美元？](https://www.zhihu.com/question/431876831)
-1. [有哪些好看又特别的情侣头像？](https://www.zhihu.com/question/361074548)
-1. [华为内部文件强调：「不造车，谁再建言造车干扰公司，调离岗位」，为什么华为坚决不触碰「整车造车」业务？](https://www.zhihu.com/question/431924620)
 1. [历史上有哪些我们认为不存在的人物实际上是存在的？](https://www.zhihu.com/question/265076764)
-1. [为什么大家都说《原神》逼氪？](https://www.zhihu.com/question/422857015)
 1. [一百元左右有什么拿得出手的生日礼物？](https://www.zhihu.com/question/333123808)
+1. [为什么大家都说《原神》逼氪？](https://www.zhihu.com/question/422857015)
 1. [「现实版农夫与蛇」安徽含山县警方通报一男子锤杀霸占其母强奸其妻杀人犯，后续该如何量刑？](https://www.zhihu.com/question/431934158)
 1. [如何看待重庆一中医院声称独创密剂「九世玄极草」可以歼灭癌细胞？](https://www.zhihu.com/question/431876705)
-1. [如何看待王俊凯为新戏贴近角色减重到48.2kg？你有什么想对他说的？](https://www.zhihu.com/question/431540644)
-1. [博尔特双脚为什么会变形，职业田径运动员的脚都会这样吗？其他类别的运动员也会有这种现象吗？](https://www.zhihu.com/question/49836933)
-1. [拜登在外交和国家安全团队成员介绍会上表示「美国将重新领导世界」，这意味着什么？](https://www.zhihu.com/question/431921120)
 1. [公安部介绍「以后上网或用网证」代替输入身份信息进行认证，福建、广东等地已开展试点，值得推广吗？](https://www.zhihu.com/question/431609876)
+1. [拜登在外交和国家安全团队成员介绍会上表示「美国将重新领导世界」，这意味着什么？](https://www.zhihu.com/question/431921120)
+1. [博尔特双脚为什么会变形，职业田径运动员的脚都会这样吗？其他类别的运动员也会有这种现象吗？](https://www.zhihu.com/question/49836933)
+1. [如何看待王俊凯为新戏贴近角色减重到48.2kg？你有什么想对他说的？](https://www.zhihu.com/question/431540644)
 1. [为什么身边的人都瞧不起努力的人?](https://www.zhihu.com/question/303725044)
-1. [我会C4D，AE，PR，Davinci，PS，AI，有拍摄基础，能建模，能做特效，哪些岗位适合我？](https://www.zhihu.com/question/420843974)
-1. [大学很孤独怎么办？室友干嘛都不会等我，没有一个人一直和我在一起？](https://www.zhihu.com/question/425530128)
-1. [如何看待武汉理工大学坠亡研究生陶崇园导师王攀获公示「恢复其硕士研究生招生资格」？](https://www.zhihu.com/question/431894257)
 1. [减肥期零食基本都戒了，但是嘴巴好寂寞，有没有适合减肥期的零食？](https://www.zhihu.com/question/38720782)
 1. [为什么星巴克里有好多人在学习？](https://www.zhihu.com/question/332527599)
-1. [如何看待杨超越说火箭少女的解散对她来说是解脱？](https://www.zhihu.com/question/431802213)
+1. [猫冬天会感到冷吗？](https://www.zhihu.com/question/428634141)
+1. [如何看待武汉理工大学坠亡研究生陶崇园导师王攀获公示「恢复其硕士研究生招生资格」？](https://www.zhihu.com/question/431894257)
 1. [如何看待苏格兰正式立法免费供应女性卫生用品？](https://www.zhihu.com/question/431914593)
-1. [如果可以将一个人的记忆储存，并嫁接到另一个人身上，那这是不是重生？](https://www.zhihu.com/question/431595276)
+1. [怎么评价国产动漫《围棋少年》?](https://www.zhihu.com/question/30119683)
 1. [刚开始我不相信，直到我目睹了一个寝室关系的破裂，大学宿舍的感情这么脆弱吗？](https://www.zhihu.com/question/316389359)
-1. [张卫健为什么没有成为周星驰的接班人？](https://www.zhihu.com/question/322254130)
+1. [如何看待杨超越说火箭少女的解散对她来说是解脱？](https://www.zhihu.com/question/431802213)
 1. [《英雄联盟》 S11 赛季哪些英雄强的离谱？](https://www.zhihu.com/question/431171408)
-1. [一般游戏的帧率达到多少才能看起来“丝滑”？](https://www.zhihu.com/question/424057685)
 1. [能独立手写Windows的程序员是什么水平？](https://www.zhihu.com/question/423054941)
 1. [如果《最后生还者2》获得TGA最佳年度游戏，TGA会不会名誉扫地？](https://www.zhihu.com/question/431517705)
-1. [怎么评价国产动漫《围棋少年》?](https://www.zhihu.com/question/30119683)
 1. [这种身材需要健身几年?](https://www.zhihu.com/question/430818707)
+1. [在西藏高地上打王者真的有buff加成吗？在你的城市又有什么专属buff呢？](https://www.zhihu.com/question/431214803)
+1. [你们失恋，都是怎么熬过来的？](https://www.zhihu.com/question/375002826)
+1. [我会C4D，AE，PR，Davinci，PS，AI，有拍摄基础，能建模，能做特效，哪些岗位适合我？](https://www.zhihu.com/question/420843974)
+1. [张卫健为什么没有成为周星驰的接班人？](https://www.zhihu.com/question/322254130)
+1. [跑步到底是前脚掌落地好，还是后脚跟落地好？](https://www.zhihu.com/question/32134107)
+1. [剩女就该将就吗？](https://www.zhihu.com/question/425182413)
+1. [如何反驳“你可以继续不喜欢你不喜欢的事物，但请允许它存在”？](https://www.zhihu.com/question/425735108)
+1. [如果可以将一个人的记忆储存，并嫁接到另一个人身上，那这是不是重生？](https://www.zhihu.com/question/431595276)
+1. [如何精读一篇雅思阅读?](https://www.zhihu.com/question/23732102)
+1. [有没有让人忍不住惊呼“太可爱了！”的小句子？](https://www.zhihu.com/question/426681666)
+1. [初一没学好，初二可以逆袭吗？](https://www.zhihu.com/question/426196820)
+1. [有哪些好看又特别的情侣头像？](https://www.zhihu.com/question/361074548)
+1. [大学很孤独怎么办？室友干嘛都不会等我，没有一个人一直和我在一起？](https://www.zhihu.com/question/425530128)
+1. [一般游戏的帧率达到多少才能看起来“丝滑”？](https://www.zhihu.com/question/424057685)
 1. [如何看待美媒称白宫批准向拜登提供总统每日简报？](https://www.zhihu.com/question/431883197)
 1. [抱着篮球睡觉，可以提升球感吗？](https://www.zhihu.com/question/424113149)
-1. [在西藏高地上打王者真的有buff加成吗？在你的城市又有什么专属buff呢？](https://www.zhihu.com/question/431214803)
 1. [如何评价《英雄联盟》新英雄芮尔的技能设定？](https://www.zhihu.com/question/431702499)
-1. [跑步到底是前脚掌落地好，还是后脚跟落地好？](https://www.zhihu.com/question/32134107)
-1. [如何反驳“你可以继续不喜欢你不喜欢的事物，但请允许它存在”？](https://www.zhihu.com/question/425735108)
 1. [如何看待《棋魂》真人版第32集的改编？](https://www.zhihu.com/question/431835024)
 1. [如何评价 2021 年第 63 届格莱美提名名单？你觉得哪些专辑/音乐人会成为最终赢家？](https://www.zhihu.com/question/431867724)
 1. [你见过最狠的SCI评论是什么?](https://www.zhihu.com/question/430036342)
