--- a/archives/2020-11-26.md
+++ b/archives/2020-11-26.md
@@ -1,56 +1,62 @@
 # 2020-11-26
 
-共 121 条
+共 127 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Thu Nov 26 2020 12:01:30 GMT+0800 (CST) -->
+<!-- 最后更新时间 Thu Nov 26 2020 13:01:13 GMT+0800 (CST) -->
 1. [阿根廷传奇球星马拉多纳因心脏疾病去世，享年 60 岁，你对他有哪些记忆？](https://www.zhihu.com/question/432018301)
 1. [怎么评价国产动漫《围棋少年》?](https://www.zhihu.com/question/30119683)
-1. [为什么许多国外品牌以创始人名字命名我们觉得高大上，而中国品牌以创始人命名却难接受？](https://www.zhihu.com/question/426636877)
-1. [如何看待上海老人将三百万房产送给一直照顾他的水果摊主，但其家属称「老人痴呆，生病时都是家属照顾」？](https://www.zhihu.com/question/431889437)
-1. [为什么有一种国内安卓机走偏了的感觉？](https://www.zhihu.com/question/430707553)
-1. [「错换人生患癌小伙」留绝笔信：无法换肝即将死去，有太多不甘，院方赔偿不超过 60 万，这一赔偿合理吗？](https://www.zhihu.com/question/431915931)
 1. [75 岁老太种罂粟被判五年，孙女称其「只是以为会开很好看的花」，你怎么看？](https://www.zhihu.com/question/431972853)
+1. [为什么有一种国内安卓机走偏了的感觉？](https://www.zhihu.com/question/430707553)
+1. [如何看待上海老人将三百万房产送给一直照顾他的水果摊主，但其家属称「老人痴呆，生病时都是家属照顾」？](https://www.zhihu.com/question/431889437)
+1. [为什么许多国外品牌以创始人名字命名我们觉得高大上，而中国品牌以创始人命名却难接受？](https://www.zhihu.com/question/426636877)
+1. [「错换人生患癌小伙」留绝笔信：无法换肝即将死去，有太多不甘，院方赔偿不超过 60 万，这一赔偿合理吗？](https://www.zhihu.com/question/431915931)
 1. [谁能告诉我异地恋到底图什么？](https://www.zhihu.com/question/304440293)
-1. [如何评价上海中心大厦?](https://www.zhihu.com/question/34681109)
 1. [如何看待小米集团王嵋为其错误言辞致歉并主动请辞？](https://www.zhihu.com/question/431963626)
+1. [如何评价上海中心大厦?](https://www.zhihu.com/question/34681109)
 1. [如何看待东南大学九龙湖校区食堂要求学生分次刷卡，以隐瞒餐费过高?](https://www.zhihu.com/question/431913030)
-1. [2021 年部分节假日安排公布，有哪些信息值得关注？你打算怎么安排？](https://www.zhihu.com/question/431980337)
-1. [如何看待卢伟冰将于11月26日举办脱口秀发布会？](https://www.zhihu.com/question/431949255)
 1. [英雄联盟北美传奇选手 Doublelift 宣布退役结束 10 年职业生涯，你有什么想说的？](https://www.zhihu.com/question/432033999)
+1. [如何看待 11 月 25 日，中国国药集团称已向国家药监局提交了新冠疫苗上市申请？](https://www.zhihu.com/question/431906581)
+1. [如何看待卢伟冰将于11月26日举办脱口秀发布会？](https://www.zhihu.com/question/431949255)
 1. [如何看待一女子首次提起离婚诉讼法院不判离，男方转走 77 万共同财产后女子再次诉讼，法院判离？](https://www.zhihu.com/question/431897128)
 1. [如何看待赖冠霖被站姐爆料吐痰吸烟谈恋爱？](https://www.zhihu.com/question/431840058)
-1. [如何看待 11 月 25 日，中国国药集团称已向国家药监局提交了新冠疫苗上市申请？](https://www.zhihu.com/question/431906581)
-1. [大学生该有什么消费观念？](https://www.zhihu.com/question/49926889)
-1. [什么样的女生会让男生很喜欢?](https://www.zhihu.com/question/375563536)
-1. [拜登在外交和国家安全团队成员介绍会上表示「美国将重新领导世界」，这意味着什么？](https://www.zhihu.com/question/431921120)
-1. [如果格里克没有发现马德堡半球实验，人类生活会带来怎样的改变？](https://www.zhihu.com/question/431965472)
-1. [为什么星巴克里有好多人在学习？](https://www.zhihu.com/question/332527599)
-1. [华为内部文件强调：「不造车，谁再建言造车干扰公司，调离岗位」，为什么华为坚决不触碰「整车造车」业务？](https://www.zhihu.com/question/431924620)
 1. [著名建筑师马岩松新建成使用的「乐成四合院幼儿园」，从建筑学角度来看有哪些亮点？](https://www.zhihu.com/question/431044387)
-1. [剩女就该将就吗？](https://www.zhihu.com/question/425182413)
-1. [王者荣耀里，五个技术主播拿五个他们的绝活英雄能打过一支职业队吗？](https://www.zhihu.com/question/430394675)
-1. [如何看待游戏《原神》新五星角色「钟离」？](https://www.zhihu.com/question/431682658)
+1. [如果格里克没有发现马德堡半球实验，人类生活会带来怎样的改变？](https://www.zhihu.com/question/431965472)
+1. [什么样的女生会让男生很喜欢?](https://www.zhihu.com/question/375563536)
+1. [2021 年部分节假日安排公布，有哪些信息值得关注？你打算怎么安排？](https://www.zhihu.com/question/431980337)
+1. [如何看待彭博社发布「疫情下宜居地区排名」，新西兰、日本、台湾省排前三，中国排名第8，美国排第18？](https://www.zhihu.com/question/432040342)
 1. [如何评价经典电视剧《父母爱情》？](https://www.zhihu.com/question/22698590)
-1. [考上了中山大学是什么心情？](https://www.zhihu.com/question/374897902)
-1. [那些敢于「砸」了铁饭碗去创业的年轻人，现在都怎么样了？](https://www.zhihu.com/question/431952139)
-1. [如何评价喀秋莎火箭炮？](https://www.zhihu.com/question/323250393)
+1. [王者荣耀里，五个技术主播拿五个他们的绝活英雄能打过一支职业队吗？](https://www.zhihu.com/question/430394675)
+1. [为什么星巴克里有好多人在学习？](https://www.zhihu.com/question/332527599)
+1. [如何看待游戏《原神》新五星角色「钟离」？](https://www.zhihu.com/question/431682658)
+1. [河南原阳一女纪委书记被杀害抛尸黄河，嫌疑人系村支书已被抓，还有哪些信息值得关注？](https://www.zhihu.com/question/432056012)
+1. [如何看待世卫组织的数据显示，世界上每三名女性中就有一名在一生中曾遭遇过身体暴力或性暴力？](https://www.zhihu.com/question/431882958)
 1. [人的大脑为什么不长在胸腔里，或者说大多动物大脑都在头部，为什么？](https://www.zhihu.com/question/431761419)
-1. [大一想创业，该怎么起步？](https://www.zhihu.com/question/430975382)
-1. [如何评价《辉夜大小姐想让我告白》209话？剧情未来走向会是什么样的？](https://www.zhihu.com/question/431610798)
-1. [有什么可以虐到肝疼的小说?](https://www.zhihu.com/question/369931227)
+1. [拜登在外交和国家安全团队成员介绍会上表示「美国将重新领导世界」，这意味着什么？](https://www.zhihu.com/question/431921120)
+1. [考上了中山大学是什么心情？](https://www.zhihu.com/question/374897902)
 1. [有没有一对手机壁纸：锁屏壁纸和解开后的桌面壁纸是递进关系？](https://www.zhihu.com/question/396414200)
+1. [那些敢于「砸」了铁饭碗去创业的年轻人，现在都怎么样了？](https://www.zhihu.com/question/431952139)
 1. [《王者荣耀》守塔最厉害的上单是哪个？](https://www.zhihu.com/question/408860777)
 1. [现在的大驱如055，一套饱和攻击能否秒掉大和？](https://www.zhihu.com/question/430310364)
-1. [有哪些搞笑的笑话或段子？](https://www.zhihu.com/question/411796217)
+1. [如何评价《辉夜大小姐想让我告白》209话？剧情未来走向会是什么样的？](https://www.zhihu.com/question/431610798)
+1. [有什么可以虐到肝疼的小说?](https://www.zhihu.com/question/369931227)
 1. [为什么程序员都喜欢安静？](https://www.zhihu.com/question/427971137)
+1. [高达系列如何才能重回巅峰？](https://www.zhihu.com/question/323960142)
+1. [华为内部文件强调：「不造车，谁再建言造车干扰公司，调离岗位」，为什么华为坚决不触碰「整车造车」业务？](https://www.zhihu.com/question/431924620)
+1. [如何评价黄渤监制的电影《风平浪静》？](https://www.zhihu.com/question/410725745)
+1. [画画只会画女生，画不出男生怎么办?](https://www.zhihu.com/question/372625605)
+1. [日军神风敢死队，一心要撞美军军舰，为什么大多数都撞不中？](https://www.zhihu.com/question/407619181)
+1. [有没有高中老师不讲，但知道了做题很有用的技巧?](https://www.zhihu.com/question/388419751)
+1. [初一初二基础差初三努力可以考上普通高中吗？](https://www.zhihu.com/question/423906326)
+1. [高三很累，有时候真的很痛苦，能给一些激励的话吗？](https://www.zhihu.com/question/430925107)
+1. [如何评价喀秋莎火箭炮？](https://www.zhihu.com/question/323250393)
+1. [太子朱标死后朱元璋为什么不立朱棣为储君呢？](https://www.zhihu.com/question/304502031)
+1. [大一想创业，该怎么起步？](https://www.zhihu.com/question/430975382)
+1. [有哪些搞笑的笑话或段子？](https://www.zhihu.com/question/411796217)
+1. [剩女就该将就吗？](https://www.zhihu.com/question/425182413)
+1. [大学生该有什么消费观念？](https://www.zhihu.com/question/49926889)
 1. [有哪些健身入门的书籍可以推荐一下的？](https://www.zhihu.com/question/361081916)
 1. [求问雅思口语素材可以直接背吗？](https://www.zhihu.com/question/379562651)
-1. [画画只会画女生，画不出男生怎么办?](https://www.zhihu.com/question/372625605)
-1. [高三很累，有时候真的很痛苦，能给一些激励的话吗？](https://www.zhihu.com/question/430925107)
-1. [如何看待彭博社发布「疫情下宜居地区排名」，新西兰、日本、台湾省排前三，中国排名第8，美国排第18？](https://www.zhihu.com/question/432040342)
-1. [如何看待世卫组织的数据显示，世界上每三名女性中就有一名在一生中曾遭遇过身体暴力或性暴力？](https://www.zhihu.com/question/431882958)
-1. [太子朱标死后朱元璋为什么不立朱棣为储君呢？](https://www.zhihu.com/question/304502031)
 1. [公安部介绍「以后上网或用网证」代替输入身份信息进行认证，福建、广东等地已开展试点，值得推广吗？](https://www.zhihu.com/question/431609876)
 1. [这种身材需要健身几年?](https://www.zhihu.com/question/430818707)
 1. [《英雄联盟》 S11 赛季哪些英雄强的离谱？](https://www.zhihu.com/question/431171408)
