update by github action

--- a/archives/2020-11-27.md
+++ b/archives/2020-11-27.md
@@ -1,62 +1,64 @@
 # 2020-11-27
 
-共 55 条
+共 57 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Fri Nov 27 2020 01:01:01 GMT+0800 (CST) -->
+<!-- 最后更新时间 Fri Nov 27 2020 02:01:16 GMT+0800 (CST) -->
 1. [北京一女孩连续加班半个月，生日当天被叫回加班在网约车上崩溃大哭，如果你是老板或者当事人，你会怎么做？](https://www.zhihu.com/question/431978333)
-1. [75 岁老太种罂粟被判五年，孙女称其「只是以为会开很好看的花」，你怎么看？](https://www.zhihu.com/question/431972853)
 1. [如何评价哈工大学生举报宿管阿姨感恩节送巧克力，称「作为宿舍辅导员，宣传这种西方节日，非常不妥」？](https://www.zhihu.com/question/432119474)
+1. [75 岁老太种罂粟被判五年，孙女称其「只是以为会开很好看的花」，你怎么看？](https://www.zhihu.com/question/431972853)
 1. [如何看待 2020.11.26 小米发布的Redmi Note9系列手机？1299 元起是否值得？](https://www.zhihu.com/question/431772923)
 1. [如何看待彭博社发布「疫情下宜居地区排名」，新西兰、日本、台湾省排前三，中国排名第8，美国排第18？](https://www.zhihu.com/question/432040342)
 1. [如何看待11月26日发布的Redmi Note9系列手机？有什么亮点和不足？](https://www.zhihu.com/question/432131167)
-1. [河南原阳一女纪委书记被杀害抛尸黄河，嫌疑人系村支书已被抓，还有哪些信息值得关注？](https://www.zhihu.com/question/432056012)
 1. [如何看待世卫组织表示「新冠病毒最初分布在全球各地，武汉只是发现地」？](https://www.zhihu.com/question/431992031)
+1. [河南原阳一女纪委书记被杀害抛尸黄河，嫌疑人系村支书已被抓，还有哪些信息值得关注？](https://www.zhihu.com/question/432056012)
 1. [有没有一对手机壁纸：锁屏壁纸和解开后的桌面壁纸是递进关系？](https://www.zhihu.com/question/396414200)
 1. [东南大学对于桃南食堂刷卡问题回应称：「确实存在分次刷卡情况，现已要求即刻整改」，后续还有哪些值得关注？](https://www.zhihu.com/question/432071758)
 1. [韩国 N 号房主犯「赵博士」一审被判 40 年，如何看待这一判刑结果？](https://www.zhihu.com/question/432046898)
-1. [如何看待小米集团王嵋为其错误言辞致歉并主动请辞？](https://www.zhihu.com/question/431963626)
 1. [巴基斯坦将立法对强奸犯进行化学阉割，这一法案是否值得借鉴？落实过程中会有哪些困难？](https://www.zhihu.com/question/432068173)
+1. [如何评价电视剧《棋魂》大结局？满意度如何（如果可以用百分数来表示）？](https://www.zhihu.com/question/432041591)
 1. [如何看待「纽约 650 具遗体半年后仍无处安葬」？目前纽约疫情如何？](https://www.zhihu.com/question/431965391)
-1. [人的大脑为什么不长在胸腔里，或者说大多动物大脑都在头部，为什么？](https://www.zhihu.com/question/431761419)
+1. [如何评价《令人心动的offer 第二季》中的王骁？](https://www.zhihu.com/question/432009180)
 1. [如何看待网络流传英雄联盟职业选手焕烽疑似开「海边水果店」相关劈腿聊天记录？](https://www.zhihu.com/question/432048068)
 1. [万达清空所有海外地产项目，压缩并出售海外业务，释放了什么信号?](https://www.zhihu.com/question/432067258)
-1. [什么样的女生会让男生很喜欢?](https://www.zhihu.com/question/375563536)
-1. [如何评价电视剧《棋魂》大结局？满意度如何（如果可以用百分数来表示）？](https://www.zhihu.com/question/432041591)
-1. [如何评价《令人心动的offer 第二季》中的王骁？](https://www.zhihu.com/question/432009180)
+1. [如何看待小米集团王嵋为其错误言辞致歉并主动请辞？](https://www.zhihu.com/question/431963626)
 1. [南方取暖设备被买爆，有企业订单比双 11 翻 5 到 10 倍，你认为南方有必要供暖吗？](https://www.zhihu.com/question/431993138)
+1. [人的大脑为什么不长在胸腔里，或者说大多动物大脑都在头部，为什么？](https://www.zhihu.com/question/431761419)
 1. [如何看待《棋魂》34集这样改编？](https://www.zhihu.com/question/432005290)
-1. [如何评价王者荣耀即将针对铭文系统的一系列改动？是否会损害玩家的利益？](https://www.zhihu.com/question/431918905)
 1. [如何看待任正非谈剥离荣耀，称「我们不因自己受难而要拖无辜的人下水」？](https://www.zhihu.com/question/432144366)
-1. [为什么我经常对最爱我的人宣泄负面情绪，把最丑陋的一面给亲人？](https://www.zhihu.com/question/309870033)
+1. [如何评价王者荣耀即将针对铭文系统的一系列改动？是否会损害玩家的利益？](https://www.zhihu.com/question/431918905)
 1. [为什么导师总说，科研搞好了，工作随便找？](https://www.zhihu.com/question/431895921)
-1. [《英雄联盟》为什么烬和男枪有子弹限制，这是不是不公平？](https://www.zhihu.com/question/428396237)
+1. [为什么我经常对最爱我的人宣泄负面情绪，把最丑陋的一面给亲人？](https://www.zhihu.com/question/309870033)
 1. [如何看待子女因邻里传言强行辞退 99 岁独立老人的保姆？](https://www.zhihu.com/question/432057738)
-1. [雏田那么漂亮，为什么佐助没有对她动心？](https://www.zhihu.com/question/406465706)
 1. [油性发质，而且掉头发，一般一天洗一次头发，用什么洗发水比较好？](https://www.zhihu.com/question/25680400)
-1. [2020 KPL 秋季季后赛重庆QGhappy 4:1 武汉eStar Pro，如何评价这场比赛？](https://www.zhihu.com/question/432086845)
-1. [你认为最催泪的一句话是什么？](https://www.zhihu.com/question/428747344)
+1. [雏田那么漂亮，为什么佐助没有对她动心？](https://www.zhihu.com/question/406465706)
+1. [《英雄联盟》为什么烬和男枪有子弹限制，这是不是不公平？](https://www.zhihu.com/question/428396237)
 1. [如何评价《流浪地球：飞跃 2020 特别版》？新增的十分钟让你看到了哪些细节？](https://www.zhihu.com/question/431751282)
+1. [2020 KPL 秋季季后赛重庆QGhappy 4:1 武汉eStar Pro，如何评价这场比赛？](https://www.zhihu.com/question/432086845)
+1. [什么样的女生会让男生很喜欢?](https://www.zhihu.com/question/375563536)
+1. [进化成适应内卷的生物会是什么样？](https://www.zhihu.com/question/431703495)
 1. [还有哪些像「双面打印也省不了几个钱」这样对节省的误解？](https://www.zhihu.com/question/266237686)
 1. [笔记本电脑需要每天关机吗？](https://www.zhihu.com/question/424633596)
-1. [如何评价经典电视剧《父母爱情》？](https://www.zhihu.com/question/22698590)
-1. [进化成适应内卷的生物会是什么样？](https://www.zhihu.com/question/431703495)
-1. [如果换一个城市开始新的生活，你最想去哪里？](https://www.zhihu.com/question/421534307)
-1. [日军神风敢死队，一心要撞美军军舰，为什么大多数都撞不中？](https://www.zhihu.com/question/407619181)
-1. [国家广播电视总局发布规定「网络直播不得为劣迹艺人提供公开出镜发声机会」，你支持吗？](https://www.zhihu.com/question/431922368)
+1. [你认为最催泪的一句话是什么？](https://www.zhihu.com/question/428747344)
 1. [单位一个老同志在领导办公室当场发飙，然后摔领导门而去，如果你是领导，你会怎么做？](https://www.zhihu.com/question/360202125)
 1. [考研到底有多少人划水？](https://www.zhihu.com/question/423383222)
-1. [女生穿过膝靴时里面都穿袜子吗，如果穿的话穿的是什么样的袜子？](https://www.zhihu.com/question/322827294)
 1. [有没有让朋友圈人气暴涨的沙雕文案？](https://www.zhihu.com/question/420730211)
+1. [女生穿过膝靴时里面都穿袜子吗，如果穿的话穿的是什么样的袜子？](https://www.zhihu.com/question/322827294)
 1. [LOL加里奥为什么不能上单?](https://www.zhihu.com/question/431697185)
 1. [如何把一页PPT做得又拥挤又清楚？](https://www.zhihu.com/question/345405596)
 1. [价位2000以内最好的计算器是什么？](https://www.zhihu.com/question/431220391)
+1. [如果换一个城市开始新的生活，你最想去哪里？](https://www.zhihu.com/question/421534307)
 1. [怎么看待郑渊洁这个作家？](https://www.zhihu.com/question/336686884)
 1. [BBA里面奥迪最差吗？](https://www.zhihu.com/question/303832098)
 1. [半泽直树中台词「下がりたまえ」可以随意使用吗？](https://www.zhihu.com/question/430774637)
+1. [外卖员写字楼送餐只能坐货梯，高峰时段还被收 3 元代送费，物业称给外卖员多一种选择，此举存在什么问题？](https://www.zhihu.com/question/432110307)
+1. [怎样让女朋友戒掉打游戏呢？](https://www.zhihu.com/question/431106637)
+1. [如何看待印度向美国租借两架无人机，印媒称「可用于监视中印边境」？](https://www.zhihu.com/question/432059355)
+1. [如何评价经典电视剧《父母爱情》？](https://www.zhihu.com/question/22698590)
+1. [日军神风敢死队，一心要撞美军军舰，为什么大多数都撞不中？](https://www.zhihu.com/question/407619181)
+1. [国家广播电视总局发布规定「网络直播不得为劣迹艺人提供公开出镜发声机会」，你支持吗？](https://www.zhihu.com/question/431922368)
 1. [如何看待世卫组织的数据显示，世界上每三名女性中就有一名在一生中曾遭遇过身体暴力或性暴力？](https://www.zhihu.com/question/431882958)
 1. [如何评价索尼对ps5代领plus collection会免游戏的行为封号处理?](https://www.zhihu.com/question/432049951)
 1. [那些敢于「砸」了铁饭碗去创业的年轻人，现在都怎么样了？](https://www.zhihu.com/question/431952139)
 1. [甲醛清除剂在中国是否为骗局？](https://www.zhihu.com/question/49954997)
-1. [怎样让女朋友戒掉打游戏呢？](https://www.zhihu.com/question/431106637)
 <!-- END -->
