--- a/archives/2020-11-27.md
+++ b/archives/2020-11-27.md
@@ -1,55 +1,71 @@
 # 2020-11-27
 
-共 106 条
+共 122 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Fri Nov 27 2020 11:01:21 GMT+0800 (CST) -->
+<!-- 最后更新时间 Fri Nov 27 2020 12:01:30 GMT+0800 (CST) -->
 1. [如何评价哈工大学生举报宿管阿姨感恩节送巧克力，称「作为宿舍辅导员，宣传这种西方节日，非常不妥」？](https://www.zhihu.com/question/432119474)
 1. [北京一女孩连续加班半个月，生日当天被叫回加班在网约车上崩溃大哭，如果你是老板或者当事人，你会怎么做？](https://www.zhihu.com/question/431978333)
 1. [进化成适应内卷的生物会是什么样？](https://www.zhihu.com/question/431703495)
-1. [如何评价《流浪地球：飞跃 2020 特别版》？新增的十分钟让你看到了哪些细节？](https://www.zhihu.com/question/431751282)
 1. [外卖员写字楼送餐只能坐货梯，高峰时段还被收 3 元代送费，物业称给外卖员多一种选择，此举存在什么问题？](https://www.zhihu.com/question/432110307)
-1. [如何评价电视剧《棋魂》大结局？满意度如何（如果可以用百分数来表示）？](https://www.zhihu.com/question/432041591)
-1. [特斯拉车顶玻璃为什么会被大风掀飞？可能会是哪些原因导致的？](https://www.zhihu.com/question/431566797)
-1. [我是女生， 32岁，上个月离婚了，大家帮我看一下这段关系中的问题是什么?](https://www.zhihu.com/question/421736426)
+1. [如何评价《流浪地球：飞跃 2020 特别版》？新增的十分钟让你看到了哪些细节？](https://www.zhihu.com/question/431751282)
 1. [iPhone 12物料成本才2498，为何敢卖6299？](https://www.zhihu.com/question/431958623)
-1. [如何把一页PPT做得又拥挤又清楚？](https://www.zhihu.com/question/345405596)
+1. [特斯拉车顶玻璃为什么会被大风掀飞？可能会是哪些原因导致的？](https://www.zhihu.com/question/431566797)
+1. [如何评价电视剧《棋魂》大结局？满意度如何（如果可以用百分数来表示）？](https://www.zhihu.com/question/432041591)
+1. [我是女生， 32岁，上个月离婚了，大家帮我看一下这段关系中的问题是什么?](https://www.zhihu.com/question/421736426)
 1. [如何看待任正非谈剥离荣耀，称「我们不因自己受难而要拖无辜的人下水」？](https://www.zhihu.com/question/432144366)
-1. [75 岁老太种罂粟被判五年，孙女称其「只是以为会开很好看的花」，你怎么看？](https://www.zhihu.com/question/431972853)
-1. [为什么导师总说，科研搞好了，工作随便找？](https://www.zhihu.com/question/431895921)
+1. [如何把一页PPT做得又拥挤又清楚？](https://www.zhihu.com/question/345405596)
 1. [《王者荣耀》「最强王者」段位是否缩水了？](https://www.zhihu.com/question/381376218)
-1. [万达清空所有海外地产项目，压缩并出售海外业务，释放了什么信号?](https://www.zhihu.com/question/432067258)
-1. [怎么看待郑渊洁这个作家？](https://www.zhihu.com/question/336686884)
+1. [《流浪地球 2》官宣定档 2023 年大年初一，导演表示剧本构思已经初步完成，你猜测故事会怎么发展？](https://www.zhihu.com/question/432161529)
+1. [为什么导师总说，科研搞好了，工作随便找？](https://www.zhihu.com/question/431895921)
 1. [纣王为什么要选择自焚?](https://www.zhihu.com/question/339629339)
 1. [为什么有人可以顿顿吃火锅，吃火锅到底在吃什么？](https://www.zhihu.com/question/431847551)
+1. [万达清空所有海外地产项目，压缩并出售海外业务，释放了什么信号?](https://www.zhihu.com/question/432067258)
 1. [如何看待印度向美国租借两架无人机，印媒称「可用于监视中印边境」？](https://www.zhihu.com/question/432059355)
+1. [怎么看待郑渊洁这个作家？](https://www.zhihu.com/question/336686884)
 1. [单位一个老同志在领导办公室当场发飙，然后摔领导门而去，如果你是领导，你会怎么做？](https://www.zhihu.com/question/360202125)
-1. [有没有大众非常喜欢的动漫你却感到厌恶?](https://www.zhihu.com/question/426157152)
 1. [你为什么不化妆？](https://www.zhihu.com/question/403494008)
 1. [我觉得我这张画的贼好看，从客观角度看有什么问题?](https://www.zhihu.com/question/429402759)
-1. [你觉得是上班更苦还是上学更苦?](https://www.zhihu.com/question/426905214)
-1. [怎样让女朋友戒掉打游戏呢？](https://www.zhihu.com/question/431106637)
-1. [如何评价《秦时明月之沧海横流》第十一集晓梦特别篇？](https://www.zhihu.com/question/432050569)
 1. [王者荣耀为什么会有妲己这种严重影响游戏平衡的英雄？](https://www.zhihu.com/question/431098746)
+1. [美团或增加骑手评价商户功能，如何看待这一功能？分别会对骑手、商户、消费者三方产生什么影响?](https://www.zhihu.com/question/432118341)
+1. [如何评价《秦时明月之沧海横流》第十一集晓梦特别篇？](https://www.zhihu.com/question/432050569)
+1. [如何看待 58 岁男子网恋见面十天转账 160 万，分手后想要回两次被判赠与？](https://www.zhihu.com/question/432200591)
+1. [如何改善出租车司机越来越不赚钱的现状？](https://www.zhihu.com/question/432136728)
+1. [如何看待公证处回应老人送房给水果摊主「反复确认后办理公证」，摊主表示「赡养老人十年，获房心安理得」？](https://www.zhihu.com/question/432060850)
+1. [杭州一女保洁误入男浴室撞见领导洗澡被罚 2000 元，物业表示「撞见领导洗澡，比较严重」，罚款合理吗？](https://www.zhihu.com/question/432092160)
+1. [原著粉看了真人网剧版《棋魂》有什么感受？](https://www.zhihu.com/question/427629264)
+1. [为什么动物是雄性漂亮，而人正相反？](https://www.zhihu.com/question/431261008)
+1. [有没有搞笑好玩的小说？](https://www.zhihu.com/question/310245092)
+1. [如何看待粉丝们寄给丁真的礼物堆成小山，对于粉丝而言追星的意义到底是什么？](https://www.zhihu.com/question/432100730)
+1. [假设每天打车100块，一年打车3w多，十年打车也才30w+，相比买车划算很多，为什么还有那么多人买车？](https://www.zhihu.com/question/407652302)
+1. [女孩子长得又胖又丑又黑怎么办？](https://www.zhihu.com/question/424900228)
+1. [什么是少女感？有哪些充分体现少女感的妹子？](https://www.zhihu.com/question/30801926)
+1. [一天喝一升牛奶会怎么样？](https://www.zhihu.com/question/21819343)
+1. [如果生个三胞胎可怎么办？](https://www.zhihu.com/question/426844813)
+1. [如何看待哈尔滨工业大学回应「宿管感恩节送糖果」，称双方都是好心，但坚决禁止宗教活动进校园？](https://www.zhihu.com/question/432196540)
+1. [你是如何排解负面情绪的？](https://www.zhihu.com/question/264239712)
+1. [第一篇论文多次被拒稿是什么体验？](https://www.zhihu.com/question/33710000)
+1. [现在普遍人的家装里有哪些不是必要的存在?](https://www.zhihu.com/question/37369617)
+1. [你会放弃一个不可能的人吗?](https://www.zhihu.com/question/431624500)
+1. [河南焦作教育局规定教师不亲自批改作业一律取消职务晋级资格，如何看待这一规定？](https://www.zhihu.com/question/432048707)
+1. [初三去尖子班还是普通班？](https://www.zhihu.com/question/418253151)
+1. [生二胎真的有意义吗？](https://www.zhihu.com/question/425037986)
+1. [怎样让女朋友戒掉打游戏呢？](https://www.zhihu.com/question/431106637)
 1. [如何评价《秦时明月之沧海横流》第 11 集？](https://www.zhihu.com/question/432048260)
+1. [75 岁老太种罂粟被判五年，孙女称其「只是以为会开很好看的花」，你怎么看？](https://www.zhihu.com/question/431972853)
+1. [BBA里面奥迪最差吗？](https://www.zhihu.com/question/303832098)
+1. [有没有大众非常喜欢的动漫你却感到厌恶?](https://www.zhihu.com/question/426157152)
+1. [你觉得是上班更苦还是上学更苦?](https://www.zhihu.com/question/426905214)
 1. [王者荣耀英雄台词最惊艳你的一句？](https://www.zhihu.com/question/430544615)
 1. [玛莎拉蒂街头撞死山区教师，肇事司机拒绝道歉和赔偿，家属发声「绝不谅解」，如何看待此事？](https://www.zhihu.com/question/427590429)
 1. [安东尼戴维斯怎样才能追上邓肯？](https://www.zhihu.com/question/431278435)
-1. [美团或增加骑手评价商户功能，如何看待这一功能？分别会对骑手、商户、消费者三方产生什么影响?](https://www.zhihu.com/question/432118341)
-1. [如何改善出租车司机越来越不赚钱的现状？](https://www.zhihu.com/question/432136728)
-1. [如何看待粉丝们寄给丁真的礼物堆成小山，对于粉丝而言追星的意义到底是什么？](https://www.zhihu.com/question/432100730)
-1. [有没有搞笑好玩的小说？](https://www.zhihu.com/question/310245092)
-1. [BBA里面奥迪最差吗？](https://www.zhihu.com/question/303832098)
 1. [大家都是怎样辅导一年级小学生的？为什么时间总不够用？甚至根本没时间阅读?](https://www.zhihu.com/question/430930062)
-1. [女孩子长得又胖又丑又黑怎么办？](https://www.zhihu.com/question/424900228)
 1. [如何看待 2020.11.26 小米发布的Redmi Note9系列手机？1299 元起是否值得？](https://www.zhihu.com/question/431772923)
-1. [你是如何排解负面情绪的？](https://www.zhihu.com/question/264239712)
 1. [做前端的你有没有觉得很吃力？](https://www.zhihu.com/question/425782106)
 1. [如何评价《令人心动的offer 第二季》中的王骁？](https://www.zhihu.com/question/432009180)
 1. [价位2000以内最好的计算器是什么？](https://www.zhihu.com/question/431220391)
 1. [如何看待网络流传英雄联盟职业选手焕烽疑似开「海边水果店」相关劈腿聊天记录？](https://www.zhihu.com/question/432048068)
 1. [半泽直树中台词「下がりたまえ」可以随意使用吗？](https://www.zhihu.com/question/430774637)
-1. [生二胎真的有意义吗？](https://www.zhihu.com/question/425037986)
 1. [有什么你一看到就起来找本子摘抄的句子或台词？](https://www.zhihu.com/question/279521817)
 1. [怎样放弃一个不可能在一起的男孩？](https://www.zhihu.com/question/430306425)
 1. [如何看待子女因邻里传言强行辞退 99 岁独立老人的保姆？](https://www.zhihu.com/question/432057738)
