update by github action

--- a/archives/2020-11-27.md
+++ b/archives/2020-11-27.md
@@ -1,59 +1,69 @@
 # 2020-11-27
 
-共 148 条
+共 155 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Fri Nov 27 2020 16:01:50 GMT+0800 (CST) -->
+<!-- 最后更新时间 Fri Nov 27 2020 17:01:38 GMT+0800 (CST) -->
 1. [如何看待任正非谈剥离荣耀，称「我们不因自己受难而要拖无辜的人下水」？](https://www.zhihu.com/question/432144366)
 1. [iPhone 12物料成本才2498，为何敢卖6299？](https://www.zhihu.com/question/431958623)
 1. [拉屎拉到干净是种怎样的体验？](https://www.zhihu.com/question/59725811)
-1. [如何评价哈工大学生举报宿管阿姨感恩节送巧克力，称「作为宿舍辅导员，宣传这种西方节日，非常不妥」？](https://www.zhihu.com/question/432119474)
-1. [我是女生， 32岁，上个月离婚了，大家帮我看一下这段关系中的问题是什么?](https://www.zhihu.com/question/421736426)
+1. [川渝将共同积极申办 2032 年夏季奥运会，你有哪些期待？](https://www.zhihu.com/question/432245034)
+1. [《流浪地球 2》官宣定档 2023 年大年初一，导演表示剧本构思已经初步完成，你猜测故事会怎么发展？](https://www.zhihu.com/question/432161529)
 1. [哈工大大二学生在自习室死亡，有哪些信息值得关注？](https://www.zhihu.com/question/431952602)
 1. [成都大学毛洪涛溺亡调查结果公布，你怎么看？有哪些信息值得关注？](https://www.zhihu.com/question/432244987)
-1. [特斯拉车顶玻璃为什么会被大风掀飞？可能会是哪些原因导致的？](https://www.zhihu.com/question/431566797)
-1. [川渝将共同积极申办 2032 年夏季奥运会，你有哪些期待？](https://www.zhihu.com/question/432245034)
-1. [如何看待哈尔滨工业大学回应「宿管感恩节送糖果」，称双方都是好心，但坚决禁止宗教活动进校园？](https://www.zhihu.com/question/432196540)
-1. [《流浪地球 2》官宣定档 2023 年大年初一，导演表示剧本构思已经初步完成，你猜测故事会怎么发展？](https://www.zhihu.com/question/432161529)
-1. [进化成适应内卷的生物会是什么样？](https://www.zhihu.com/question/431703495)
-1. [杭州一女保洁误入男浴室撞见领导洗澡被罚 2000 元，物业表示「撞见领导洗澡，比较严重」，罚款合理吗？](https://www.zhihu.com/question/432092160)
 1. [为什么动物是雄性漂亮，而人正相反？](https://www.zhihu.com/question/431261008)
-1. [外卖员写字楼送餐只能坐货梯，高峰时段还被收 3 元代送费，物业称给外卖员多一种选择，此举存在什么问题？](https://www.zhihu.com/question/432110307)
-1. [如何评价Redmi11月26日发布的Redmi Watch智能手表？](https://www.zhihu.com/question/432150278)
+1. [杭州一女保洁误入男浴室撞见领导洗澡被罚 2000 元，物业表示「撞见领导洗澡，比较严重」，罚款合理吗？](https://www.zhihu.com/question/432092160)
+1. [如何看待哈尔滨工业大学回应「宿管感恩节送糖果」，称双方都是好心，但坚决禁止宗教活动进校园？](https://www.zhihu.com/question/432196540)
 1. [如何看待 58 岁男子网恋见面十天转账 160 万，分手后想要回两次被判赠与？](https://www.zhihu.com/question/432200591)
 1. [如何改善出租车司机越来越不赚钱的现状？](https://www.zhihu.com/question/432136728)
 1. [如何看待公证处回应老人送房给水果摊主「反复确认后办理公证」，摊主表示「赡养老人十年，获房心安理得」？](https://www.zhihu.com/question/432060850)
+1. [如何评价张艺谋导演的电影《一秒钟》？](https://www.zhihu.com/question/284643087)
 1. [为什么有人可以顿顿吃火锅，吃火锅到底在吃什么？](https://www.zhihu.com/question/431847551)
-1. [纣王为什么要选择自焚?](https://www.zhihu.com/question/339629339)
-1. [美团或增加骑手评价商户功能，如何看待这一功能？分别会对骑手、商户、消费者三方产生什么影响?](https://www.zhihu.com/question/432118341)
+1. [如何评价Redmi11月26日发布的Redmi Watch智能手表？](https://www.zhihu.com/question/432150278)
 1. [王者荣耀为什么会有妲己这种严重影响游戏平衡的英雄？](https://www.zhihu.com/question/431098746)
+1. [美团或增加骑手评价商户功能，如何看待这一功能？分别会对骑手、商户、消费者三方产生什么影响?](https://www.zhihu.com/question/432118341)
 1. [你为什么不化妆？](https://www.zhihu.com/question/403494008)
-1. [我觉得我这张画的贼好看，从客观角度看有什么问题?](https://www.zhihu.com/question/429402759)
-1. [《王者荣耀》「最强王者」段位是否缩水了？](https://www.zhihu.com/question/381376218)
 1. [为什么机箱这么没技术含量的东西有些会和高端的cpu一样贵？](https://www.zhihu.com/question/59240026)
-1. [如何评价《流浪地球：飞跃 2020 特别版》？新增的十分钟让你看到了哪些细节？](https://www.zhihu.com/question/431751282)
+1. [我觉得我这张画的贼好看，从客观角度看有什么问题?](https://www.zhihu.com/question/429402759)
 1. [假设每天打车100块，一年打车3w多，十年打车也才30w+，相比买车划算很多，为什么还有那么多人买车？](https://www.zhihu.com/question/407652302)
+1. [如何看待 2020.11.26 小米发布的Redmi Note9系列手机？1299 元起是否值得？](https://www.zhihu.com/question/431772923)
+1. [我是女生， 32岁，上个月离婚了，大家帮我看一下这段关系中的问题是什么?](https://www.zhihu.com/question/421736426)
+1. [为什么毛巾干了之后会有很大的味道？然而只要一碰水就什么味道都没了？](https://www.zhihu.com/question/46804000)
 1. [一天喝一升牛奶会怎么样？](https://www.zhihu.com/question/21819343)
-1. [原著粉看了真人网剧版《棋魂》有什么感受？](https://www.zhihu.com/question/427629264)
 1. [河南焦作教育局规定教师不亲自批改作业一律取消职务晋级资格，如何看待这一规定？](https://www.zhihu.com/question/432048707)
+1. [如何看待美媒称特朗普政府又开展清洗，基辛格等多人突然被撤职？](https://www.zhihu.com/question/432202806)
+1. [原著粉看了真人网剧版《棋魂》有什么感受？](https://www.zhihu.com/question/427629264)
+1. [如果你得到了一个体积为1L，容积为1000L 的杯子，你会用它来做什么？](https://www.zhihu.com/question/431185261)
+1. [现在普遍人的家装里有哪些不是必要的存在?](https://www.zhihu.com/question/37369617)
+1. [男生都 26 岁了还买 PS5 ，值得吗?](https://www.zhihu.com/question/422512191)
+1. [特斯拉车顶玻璃为什么会被大风掀飞？可能会是哪些原因导致的？](https://www.zhihu.com/question/431566797)
+1. [什么是少女感？有哪些充分体现少女感的妹子？](https://www.zhihu.com/question/30801926)
+1. [如何看待特朗普宣布赦免前国安顾问弗林？后续将产生什么影响？](https://www.zhihu.com/question/432060275)
+1. [如何看待粉丝们寄给丁真的礼物堆成小山，对于粉丝而言追星的意义到底是什么？](https://www.zhihu.com/question/432100730)
+1. [如何看待牛津词典挑不出 2020 年度代表词？你的年度热词是什么？](https://www.zhihu.com/question/431927461)
+1. [如何看待联合国报告称，新冠疫情恐将令女性地位倒退 25 年？](https://www.zhihu.com/question/432196776)
+1. [阿里云进入Gartner数据库领导者（Leaders）象限对于国内数据库发展有什么意义？](https://www.zhihu.com/question/432168240)
+1. [婆婆对儿媳说：我儿子可真听你的话，怎么回才显得情商高？](https://www.zhihu.com/question/431787513)
+1. [河南卫辉一小学校门口文具店卖电子烟给小学生，20 元 1 根，家长怒斥：毫无底线，你怎么看？](https://www.zhihu.com/question/432069100)
+1. [每天跳绳2000下会发生什么改变？](https://www.zhihu.com/question/295812047)
+1. [你会放弃一个不可能的人吗?](https://www.zhihu.com/question/431624500)
+1. [如何看待外媒称：特朗普表示如果选举人团投票给拜登，他将离开白宫？](https://www.zhihu.com/question/432193913)
+1. [男人真正爱一个女人是什么样子的？](https://www.zhihu.com/question/312542839)
+1. [值得为了胶片模拟买一台富士相机吗?](https://www.zhihu.com/question/418699934)
+1. [那些在会计师事务所的年轻人最后都怎么样了？](https://www.zhihu.com/question/345440768)
+1. [日常补水美得像门儿艺术是种怎样的体验？](https://www.zhihu.com/question/431798584)
+1. [有哪些温柔到爆炸的壁纸？](https://www.zhihu.com/question/390884459)
+1. [有哪些「高逼格」的情头？](https://www.zhihu.com/question/316269990)
+1. [如何评价哈工大学生举报宿管阿姨感恩节送巧克力，称「作为宿舍辅导员，宣传这种西方节日，非常不妥」？](https://www.zhihu.com/question/432119474)
+1. [进化成适应内卷的生物会是什么样？](https://www.zhihu.com/question/431703495)
+1. [外卖员写字楼送餐只能坐货梯，高峰时段还被收 3 元代送费，物业称给外卖员多一种选择，此举存在什么问题？](https://www.zhihu.com/question/432110307)
+1. [纣王为什么要选择自焚?](https://www.zhihu.com/question/339629339)
+1. [《王者荣耀》「最强王者」段位是否缩水了？](https://www.zhihu.com/question/381376218)
+1. [如何评价《流浪地球：飞跃 2020 特别版》？新增的十分钟让你看到了哪些细节？](https://www.zhihu.com/question/431751282)
 1. [如果生个三胞胎可怎么办？](https://www.zhihu.com/question/426844813)
 1. [你见过最能吃辣的是哪里人？](https://www.zhihu.com/question/345471945)
-1. [为什么毛巾干了之后会有很大的味道？然而只要一碰水就什么味道都没了？](https://www.zhihu.com/question/46804000)
-1. [现在普遍人的家装里有哪些不是必要的存在?](https://www.zhihu.com/question/37369617)
-1. [如何看待粉丝们寄给丁真的礼物堆成小山，对于粉丝而言追星的意义到底是什么？](https://www.zhihu.com/question/432100730)
 1. [女孩子长得又胖又丑又黑怎么办？](https://www.zhihu.com/question/424900228)
-1. [如何看待特朗普宣布赦免前国安顾问弗林？后续将产生什么影响？](https://www.zhihu.com/question/432060275)
-1. [什么是少女感？有哪些充分体现少女感的妹子？](https://www.zhihu.com/question/30801926)
-1. [如果你得到了一个体积为1L，容积为1000L 的杯子，你会用它来做什么？](https://www.zhihu.com/question/431185261)
 1. [客观评价，儿科医生真的很少人想当吗？](https://www.zhihu.com/question/432074066)
-1. [如何看待牛津词典挑不出 2020 年度代表词？你的年度热词是什么？](https://www.zhihu.com/question/431927461)
-1. [如何看待外媒称：特朗普表示如果选举人团投票给拜登，他将离开白宫？](https://www.zhihu.com/question/432193913)
-1. [如何看待联合国报告称，新冠疫情恐将令女性地位倒退 25 年？](https://www.zhihu.com/question/432196776)
-1. [男生都 26 岁了还买 PS5 ，值得吗?](https://www.zhihu.com/question/422512191)
-1. [你会放弃一个不可能的人吗?](https://www.zhihu.com/question/431624500)
-1. [河南卫辉一小学校门口文具店卖电子烟给小学生，20 元 1 根，家长怒斥：毫无底线，你怎么看？](https://www.zhihu.com/question/432069100)
-1. [值得为了胶片模拟买一台富士相机吗?](https://www.zhihu.com/question/418699934)
-1. [婆婆对儿媳说：我儿子可真听你的话，怎么回才显得情商高？](https://www.zhihu.com/question/431787513)
 1. [如何评价电视剧《棋魂》大结局？满意度如何（如果可以用百分数来表示）？](https://www.zhihu.com/question/432041591)
 1. [如何把一页PPT做得又拥挤又清楚？](https://www.zhihu.com/question/345405596)
 1. [你对马拉多纳的记忆有哪些，他留下了哪些精彩镜头？](https://www.zhihu.com/question/432021761)
@@ -61,8 +71,6 @@
 1. [你是什么时候发现自己是猫猫的唯一?](https://www.zhihu.com/question/429452848)
 1. [你若是崇祯，杀不杀袁崇焕？](https://www.zhihu.com/question/431021526)
 1. [单位一个老同志在领导办公室当场发飙，然后摔领导门而去，如果你是领导，你会怎么做？](https://www.zhihu.com/question/360202125)
-1. [那些在会计师事务所的年轻人最后都怎么样了？](https://www.zhihu.com/question/345440768)
-1. [日常补水美得像门儿艺术是种怎样的体验？](https://www.zhihu.com/question/431798584)
 1. [北京一女孩连续加班半个月，生日当天被叫回加班在网约车上崩溃大哭，如果你是老板或者当事人，你会怎么做？](https://www.zhihu.com/question/431978333)
 1. [男主老实忠犬的小说有哪些？](https://www.zhihu.com/question/323385638)
 1. [如何看待印度向美国租借两架无人机，印媒称「可用于监视中印边境」？](https://www.zhihu.com/question/432059355)
@@ -87,7 +95,6 @@
 1. [玛莎拉蒂街头撞死山区教师，肇事司机拒绝道歉和赔偿，家属发声「绝不谅解」，如何看待此事？](https://www.zhihu.com/question/427590429)
 1. [安东尼戴维斯怎样才能追上邓肯？](https://www.zhihu.com/question/431278435)
 1. [大家都是怎样辅导一年级小学生的？为什么时间总不够用？甚至根本没时间阅读?](https://www.zhihu.com/question/430930062)
-1. [如何看待 2020.11.26 小米发布的Redmi Note9系列手机？1299 元起是否值得？](https://www.zhihu.com/question/431772923)
 1. [做前端的你有没有觉得很吃力？](https://www.zhihu.com/question/425782106)
 1. [如何评价《令人心动的offer 第二季》中的王骁？](https://www.zhihu.com/question/432009180)
 1. [价位2000以内最好的计算器是什么？](https://www.zhihu.com/question/431220391)
