update by github action

--- a/archives/2020-11-28.md
+++ b/archives/2020-11-28.md
@@ -1,57 +1,65 @@
 # 2020-11-28
 
-共 123 条
+共 131 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sat Nov 28 2020 14:01:31 GMT+0800 (CST) -->
+<!-- 最后更新时间 Sat Nov 28 2020 15:01:14 GMT+0800 (CST) -->
 1. [如何看待「康巴汉子」丁真为家乡四川理塘拍摄的旅游宣传片？](https://www.zhihu.com/question/432035858)
 1. [如何看待武汉理工大学决定不予通过教师王攀的硕士研究生招生资格?](https://www.zhihu.com/question/432325134)
 1. [有哪些令人大跌眼镜的「骚」操作？](https://www.zhihu.com/question/431045341)
 1. [澳媒称澳大利亚 53 艘煤炭船在华滞留一个多月，澳总理回应「我们想与中国和谐相处」，对此你怎么看？](https://www.zhihu.com/question/432238606)
-1. [这些年，互联网科技怎样改变了贫困乡村的生活？](https://www.zhihu.com/question/430972126)
+1. [如何看待农妇打完农药遇强奸，用药水箱软管勒死施暴男子，检察院认为「属于正当防卫，依法不负刑事责任」？](https://www.zhihu.com/question/432282922)
 1. [成都大学毛洪涛溺亡调查结果公布，你怎么看？有哪些信息值得关注？](https://www.zhihu.com/question/432244987)
 1. [如何看待唐家三少直播秀码字手速，一小时8000字？网文作者需要必备的基础技能有哪些？](https://www.zhihu.com/question/432302960)
+1. [伊朗媒体称，一名伊朗核科学家在德黑兰附近被暗杀，有哪些信息值得关注？](https://www.zhihu.com/question/432314788)
 1. [售卖燕窝遭「打假」，辛巴道歉称确实存在夸大宣传，所涉燕窝退一赔三，你怎么看？](https://www.zhihu.com/question/432287360)
 1. [如何看待 11 月 26 日传奇球星马拉多纳葬礼的殡仪人员晒与马拉多纳遗体自拍，激起众怒被开除？](https://www.zhihu.com/question/432200786)
-1. [哈工大大二学生在自习室死亡，有哪些信息值得关注？](https://www.zhihu.com/question/431952602)
-1. [伊朗媒体称，一名伊朗核科学家在德黑兰附近被暗杀，有哪些信息值得关注？](https://www.zhihu.com/question/432314788)
-1. [如何看待农妇打完农药遇强奸，用药水箱软管勒死施暴男子，检察院认为「属于正当防卫，依法不负刑事责任」？](https://www.zhihu.com/question/432282922)
 1. [为什么在国产车进步如此明显的情况下，还有那么多人迷恋合资？](https://www.zhihu.com/question/359491361)
+1. [哈工大大二学生在自习室死亡，有哪些信息值得关注？](https://www.zhihu.com/question/431952602)
 1. [如何评价2021张宇四套卷？](https://www.zhihu.com/question/431587375)
 1. [你有没有什么忠告想告诉恋爱中的女孩子？](https://www.zhihu.com/question/327011953)
-1. [如何看待网传的「人大附中分校初一学生家教要求」？真实性如何？](https://www.zhihu.com/question/432248148)
 1. [如何评价美剧《女王的棋局》（又名《后翼弃兵》Queen's Gambit）？](https://www.zhihu.com/question/425416775)
-1. [如何评价《一人之下》503（534）话？](https://www.zhihu.com/question/432325012)
-1. [扉间和佩恩六道打起来会怎样？](https://www.zhihu.com/question/430221530)
-1. [为什么刺客信条越来越不优雅华丽了啊？](https://www.zhihu.com/question/429642551)
-1. [家庭收入一般，老婆一定要请个保姆在家带小孩，我该怎么办？](https://www.zhihu.com/question/430935340)
+1. [如何看待网传的「人大附中分校初一学生家教要求」？真实性如何？](https://www.zhihu.com/question/432248148)
 1. [如何看待暴雪过后鸡西一拾荒老人主动为餐馆扫雪，餐馆老板表示「只要我的小店在，就有老人吃饭的地方」？](https://www.zhihu.com/question/432291197)
+1. [如何评价《一人之下》503（534）话？](https://www.zhihu.com/question/432325012)
+1. [如何看待网上流传「无门槛加到高学历优质男方法」：检索论文，给名校作者发邮件借讨论学术之名要微信？](https://www.zhihu.com/question/432373156)
+1. [家庭收入一般，老婆一定要请个保姆在家带小孩，我该怎么办？](https://www.zhihu.com/question/430935340)
+1. [为什么大部分人一辈子赚不到500万，却觉得25岁拿500万退休跑不赢通货膨胀活不下去？](https://www.zhihu.com/question/431742535)
+1. [为什么刺客信条越来越不优雅华丽了啊？](https://www.zhihu.com/question/429642551)
 1. [如何看待一网友「小飞侠嘟咔嘟」发文称被父母逼婚赚彩礼，逃离后又被找到躲进派出所，目前双方达成调解？](https://www.zhihu.com/question/432227383)
 1. [男博士是喜欢找个女博士，还是愿意找个比自己小几岁的师妹？](https://www.zhihu.com/question/302750196)
-1. [如何看待网上流传「无门槛加到高学历优质男方法」：检索论文，给名校作者发邮件借讨论学术之名要微信？](https://www.zhihu.com/question/432373156)
-1. [为什么大部分人一辈子赚不到500万，却觉得25岁拿500万退休跑不赢通货膨胀活不下去？](https://www.zhihu.com/question/431742535)
-1. [如何看待60岁以上老人（不分地域）在山东免费乘公交? 对其他地区是否有借鉴意义？](https://www.zhihu.com/question/432139650)
+1. [如何评价2020kpl秋季赛胜者组AG超玩会4：0战胜WB.TS？](https://www.zhihu.com/question/432305429)
 1. [数学是一个自己骗自己的学科吗?](https://www.zhihu.com/question/421203214)
-1. [如何评价米哈游新作《原神》的国语配音演出效果？](https://www.zhihu.com/question/330966934)
+1. [如何看待北京交通大学学生在 ATM 机内学习?](https://www.zhihu.com/question/427355674)
+1. [如何看待60岁以上老人（不分地域）在山东免费乘公交? 对其他地区是否有借鉴意义？](https://www.zhihu.com/question/432139650)
+1. [那些斗不过婆婆的人最后都怎么样了?](https://www.zhihu.com/question/357388657)
+1. [在大学里有不化妆的女生吗？](https://www.zhihu.com/question/327628390)
+1. [这些年，互联网科技怎样改变了贫困乡村的生活？](https://www.zhihu.com/question/430972126)
+1. [自己每天坚持看书，也每天坚持学习，但是为什么过了一段时间总觉得没有学一样？](https://www.zhihu.com/question/61269583)
+1. [如何评价国产动漫《天官赐福》?](https://www.zhihu.com/question/392100278)
+1. [如何看待周迅说现在的观众都很理性？](https://www.zhihu.com/question/432261416)
+1. [在一所女生很多的大学是什么感觉？](https://www.zhihu.com/question/264682886)
+1. [如果让你选择在《明日方舟》的泰拉大陆上开局，你会选择在哪个势力？](https://www.zhihu.com/question/431922881)
+1. [有什么事情是你留学之后才知道的？](https://www.zhihu.com/question/58950235)
+1. [如何评价乃木坂二期生堀未央奈毕业发表？](https://www.zhihu.com/question/432303883)
+1. [开一个盈利性自习室的可行性如何？](https://www.zhihu.com/question/36887220)
+1. [如何看待联想拯新 YO 粉丝年度盛典？](https://www.zhihu.com/question/432268220)
+1. [你会原谅，曾经狠狠伤害过你的人吗？](https://www.zhihu.com/question/431415281)
+1. [动物园的动物会受到虐待还有吃不饱吗？](https://www.zhihu.com/question/27213517)
+1. [化妆怎么画出眼睑下至的感觉？](https://www.zhihu.com/question/335434014)
+1. [你有哪些住宿必备好吃不贵的零食？](https://www.zhihu.com/question/342445699)
+1. [在aibee工作是怎样的一种体验？](https://www.zhihu.com/question/350097713)
 1. [想养猫，哪种猫最蠢？](https://www.zhihu.com/question/424906246)
 1. [女生打王者一定要找个野王cpdd吗？](https://www.zhihu.com/question/431060128)
-1. [如何看待北京交通大学学生在 ATM 机内学习?](https://www.zhihu.com/question/427355674)
-1. [如何看待周迅说现在的观众都很理性？](https://www.zhihu.com/question/432261416)
+1. [中国有哪些名头很响却已经散佚的古籍？](https://www.zhihu.com/question/26049905)
+1. [如何评价米哈游新作《原神》的国语配音演出效果？](https://www.zhihu.com/question/330966934)
+1. [27岁确诊糖尿病，人生是不是没希望了?](https://www.zhihu.com/question/426991242)
+1. [扉间和佩恩六道打起来会怎样？](https://www.zhihu.com/question/430221530)
 1. [抛开米哈游自己的操作，尬吹原神的人真的很多吗？](https://www.zhihu.com/question/431510087)
-1. [那些斗不过婆婆的人最后都怎么样了?](https://www.zhihu.com/question/357388657)
-1. [如何评价国产动漫《天官赐福》?](https://www.zhihu.com/question/392100278)
-1. [在大学里有不化妆的女生吗？](https://www.zhihu.com/question/327628390)
-1. [自己每天坚持看书，也每天坚持学习，但是为什么过了一段时间总觉得没有学一样？](https://www.zhihu.com/question/61269583)
-1. [在一所女生很多的大学是什么感觉？](https://www.zhihu.com/question/264682886)
-1. [如何评价乃木坂二期生堀未央奈毕业发表？](https://www.zhihu.com/question/432303883)
-1. [有什么事情是你留学之后才知道的？](https://www.zhihu.com/question/58950235)
 1. [高三都上了一半了，怎样才能克制玩心，知道上进，好好学习呢？](https://www.zhihu.com/question/429174099)
 1. [异地恋的你们，现在还在一起吗？](https://www.zhihu.com/question/367445769)
 1. [如果看待马保国成为C刊大佬的论文研究对象？学术追热点真的好吗？](https://www.zhihu.com/question/432229295)
-1. [你会原谅，曾经狠狠伤害过你的人吗？](https://www.zhihu.com/question/431415281)
 1. [川渝将共同积极申办 2032 年夏季奥运会，你有哪些期待？](https://www.zhihu.com/question/432245034)
-1. [中国有哪些名头很响却已经散佚的古籍？](https://www.zhihu.com/question/26049905)
-1. [27岁确诊糖尿病，人生是不是没希望了?](https://www.zhihu.com/question/426991242)
 1. [一个人过生日和一个人去医院你接受不了哪个 ？](https://www.zhihu.com/question/422932336)
 1. [如何看待外媒称：特朗普表示如果选举人团投票给拜登，他将离开白宫？](https://www.zhihu.com/question/432193913)
 1. [学习不好，是不努力的原因吗？](https://www.zhihu.com/question/430199851)
